// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DemoExplorerSetupEmbedded.vue > Should display embeddable setup 1`] = `
"<div class="v-application v-theme--light v-layout v-layout--full-height v-locale--is-ltr">
  <div class="v-application__wrap">
    <main data-v-d31fb907="" class="v-main" style="--v-layout-left: 0px; --v-layout-right: 0px; --v-layout-top: 0px; --v-layout-bottom: 0px; transition: none;">
      <div data-v-d31fb907="" class="v-container v-container--fluid v-locale--is-ltr">
        <form data-v-d31fb907="" class="v-form mt-4" novalidate="">
          <div data-v-d31fb907="" class="v-row">
            <div data-v-d31fb907="" class="v-col">
              <div data-v-d31fb907="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-text-field">
                <!---->
                <div class="v-input__control">
                  <div class="v-field v-field--center-affix v-field--variant-outlined v-theme--light v-locale--is-ltr">
                    <div class="v-field__overlay"></div>
                    <div class="v-field__loader">
                      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                        <!---->
                        <div class="v-progress-linear__background"></div>
                        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                          <div class="v-progress-linear__indeterminate">
                            <div class="v-progress-linear__indeterminate long"></div>
                            <div class="v-progress-linear__indeterminate short"></div>
                          </div>
                        </transition-stub>
                        <!---->
                      </div>
                    </div>
                    <!---->
                    <div class="v-field__field" data-no-activator="">
                      <!----><label class="v-label v-field-label" for="input-0">
                        <!---->RPC URL
                      </label>
                      <!----><input placeholder="https://my.rpc.com:8545" size="1" type="text" id="input-0" aria-describedby="input-0-messages" required="" class="v-field__input">
                      <!---->
                    </div>
                    <!---->
                    <!---->
                    <div class="v-field__outline">
                      <div class="v-field__outline__start"></div>
                      <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                          <!---->RPC URL
                        </label></div>
                      <div class="v-field__outline__end"></div>
                      <!---->
                    </div>
                  </div>
                </div>
                <div class="v-input__append">
                  <!----><button data-v-d31fb907="" type="submit" class="v-btn v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" style="height: 56px;" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator="">Get Started</span>
                    <!---->
                    <!---->
                  </button>
                </div>
                <div class="v-input__details">
                  <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
                    <!---->
                  </transition-group-stub>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </main>
  </div>
</div>"
`;

exports[`DemoExplorerSetupEmbedded.vue > Should display success message with domain 1`] = `
"<div class="v-application v-theme--light v-layout v-layout--full-height v-locale--is-ltr">
  <div class="v-application__wrap">
    <main data-v-d31fb907="" class="v-main" style="--v-layout-left: 0px; --v-layout-right: 0px; --v-layout-top: 0px; --v-layout-bottom: 0px; transition: none;" domain="my.explorer.com">
      <div data-v-d31fb907="" class="v-container v-container--fluid v-locale--is-ltr">
        <form data-v-d31fb907="" class="v-form mt-4" novalidate="">
          <div data-v-d31fb907="" class="v-row">
            <div data-v-d31fb907="" class="v-col">
              <div data-v-d31fb907="" class="v-input v-input--horizontal v-input--center-affix v-input--density-default v-theme--light v-locale--is-ltr v-text-field">
                <!---->
                <div class="v-input__control">
                  <div class="v-field v-field--center-affix v-field--variant-outlined v-theme--light v-locale--is-ltr">
                    <div class="v-field__overlay"></div>
                    <div class="v-field__loader">
                      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                        <!---->
                        <div class="v-progress-linear__background"></div>
                        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                          <div class="v-progress-linear__indeterminate">
                            <div class="v-progress-linear__indeterminate long"></div>
                            <div class="v-progress-linear__indeterminate short"></div>
                          </div>
                        </transition-stub>
                        <!---->
                      </div>
                    </div>
                    <!---->
                    <div class="v-field__field" data-no-activator="">
                      <!----><label class="v-label v-field-label" for="input-0">
                        <!---->RPC URL
                      </label>
                      <!----><input placeholder="https://my.rpc.com:8545" size="1" type="text" id="input-0" aria-describedby="input-0-messages" required="" class="v-field__input">
                      <!---->
                    </div>
                    <!---->
                    <!---->
                    <div class="v-field__outline">
                      <div class="v-field__outline__start"></div>
                      <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="input-0">
                          <!---->RPC URL
                        </label></div>
                      <div class="v-field__outline__end"></div>
                      <!---->
                    </div>
                  </div>
                </div>
                <div class="v-input__append">
                  <!----><button data-v-d31fb907="" type="submit" class="v-btn v-btn--disabled v-theme--light bg-primary v-btn--density-default v-btn--size-default v-btn--variant-elevated" style="height: 56px;" disabled=""><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
                    <!----><span class="v-btn__content" data-no-activator="">Get Started</span>
                    <!---->
                    <!---->
                  </button>
                </div>
                <div class="v-input__details">
                  <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages" role="alert" aria-live="polite" id="input-0-messages">
                    <!---->
                  </transition-group-stub>
                  <!---->
                </div>
              </div>
            </div>
          </div>
        </form>
      </div>
    </main>
  </div>
</div>"
`;
